# Evering

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/: copilot-instructions.md
bench/ipc-bench/: Cargo.toml
bench/ipc-bench/src/: bench.rs  evering.rs  lib.rs  monoio.rs  shmipc.rs  utils.rs
docs/: development.md  driver.md  lib.md  op.md  resource.md  uring.md
docs/ai/: context.md  scan.md
docs/design/: msg.md  talc.md  token.md
docs/invariants/: boxed.md  mem.md  talc.md  token.md
evering/: Cargo.toml
evering-ipc/: Cargo.toml
evering-ipc/src/: lib.rs  tests.rs
evering-ipc/src/tests/: box_ipc.rs  char_ipc.rs  multi_ipc.rs  single_ipc.rs
evering-shm/: Cargo.toml
evering-shm/src/: align.rs  area.rs  arena.rs  boxed.rs  channel.rs  counter.rs  header.rs  lib.rs  malloc.rs  msg.rs  os.rs  perlude.rs  queue.rs  reg.rs  shm_alloc.rs  shm_area.rs  shm_box.rs  shm_header.rs  tests.rs
evering-shm/src/channel/: cross.rs  driver.rs
evering-shm/src/malloc/: blink.rs  gma.rs  tlsf.rs
evering-shm/src/os/: unix.rs
evering-shm/src/shm_alloc/: blink.rs  gma.rs  tlsf.rs
evering-shm/src/tests/: mock.rs  unix.rs
evering-tokio/: Cargo.toml
evering-tokio/src/: main.rs  op.rs
evering/src/: area.rs  arena.rs  boxed.rs  channel.rs  counter.rs  driver.rs  header.rs  layout.rs  lib.rs  malloc.rs  mem.rs  msg.rs  op.rs  os.rs  perlude.rs  queue.rs  reg.rs  resource.rs  talc.rs  tests.rs  token.rs  uring.rs  uring_array.rs  uring_depr.rs
evering/src/channel/: cross.rs  driver.rs  local.rs
evering/src/driver/: cache.rs  cell.rs  inner.rs  locked.rs  op_cache.rs  op_sign.rs  unlocked.rs
evering/src/mem/: area.rs
evering/src/os/: unix.rs
evering/src/tests/: mock.rs  unix.rs
evering/src/tests/mock/: arena.rs  talc.rs
evering/src/tests/unix/: arena.rs  talc.rs
evering/src/uring/: asynch.rs  asynch_alloc.rs  bare.rs  queue.rs  sync.rs  tests.rs
evering/src/uring_depr/: layout.rs  queue.rs
examples/evering-tokio/: Cargo.toml
examples/evering-tokio/src/: main.rs  op.rs
