[workspace]
resolver = "3"
members = ["evering", "bench/ipc-bench"]

[workspace.package]
version = "0.1.0"
authors = ["Nostalgia <Nostalume@outlook.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["full"] }

crossbeam-utils = { version = "0.8", default-features = false }
lock_api = "0.4.14"
spin = { version = "0.10.0", features = ["lock_api"] }
fastrand = "2.3.0"

bytes = "1.10.1"
bytesize = "2.1.0"

nix = "0.30.1"

evering = { path = "evering" }
