[workspace]
resolver = "3"
members = ["evering", "bench/ipc-bench"]

[workspace.package]
version = "0.1.0"
authors = ["Nostalgia <Nostalume@outlook.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["full"] }
nix = "0.30.1"

crossbeam-utils = { version = "0.8", default-features = false }
lock_api = "0.4.14"
spin = { version = "0.10.0", features = ["lock_api"] }

hdrhistogram = "7.5.4"
fastrand = "2.3.0"
bytes = "1.10.1"
bytesize = "2.1.0"

evering = { path = "evering" }

[profile.bench]
opt-level = 3          # Maximum optimizations for performance
debug = false          # Disable debug info to reduce binary size and overhead
strip = true           # Strip symbols for smaller binaries (optional but recommended)
lto = true             # Link-time optimization for further speed gains
codegen-units = 1      # Single codegen unit for better inlining (can slow compile time)
panic = "abort"        # Faster panics in benchmarks (optional)