[package]
name = "evering-ipc"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
evering = { path = "../evering" }
evering-shm = { path = "../evering-shm" }
concurrent-queue = "2.5.0"
lfqueue = "0.8.1"

[dev-dependencies]
evering-shm = { path = "../evering-shm", features = ["unix"] }
tokio.workspace = true
fastrand.workspace = true
