[package]
name = "evering-ipc"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = []

unix = ["evering-shm/unix"]

[dependencies]
evering.workspace = true
evering-shm = { workspace = true, features = ["unix"] }
concurrent-queue = "2.5.0"
lfqueue = "0.8.1"

[dev-dependencies]
evering-shm = { path = "../evering-shm", features = ["unix"] }
tokio.workspace = true
fastrand.workspace = true
