[package]
name = "evering-shm"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = ["nightly"]

nightly = []

std = []
unix = ["std", "dep:nix"]
windows = ["std"]

[dependencies]
lfqueue = { version = "0.8.1", default-features = false }

allocator-api2 = "0.3.0"
blink-alloc = { version = "0.3.1", features = ["nightly", "sync"] }
good_memory_allocator = { version = "0.1.7", features = ["allocator"] }
rlsf = "0.2.1"

spin.workspace = true
crossbeam-utils.workspace = true
memory_addr = "0.4.0"

tracing = { version = "0.1", optional = true }
paste = "1"

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, optional = true, features = ["fs", "mman"] }

[dev-dependencies]
rand = "0.9"
crossbeam-queue = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
