[package]
name = "evering-shm"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = ["nightly"]

nightly = []

std = []
unix = ["std", "dep:nix"]
windows = ["std"]

[dependencies]
# memory control
spin.workspace = true
crossbeam-utils.workspace = true
memory_addr = "0.4.0"

# helper
tracing = { version = "0.1", optional = true }
paste = "1"

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, optional = true, features = ["fs", "mman"] }

[dev-dependencies]
fastrand.workspace = true
crossbeam-queue = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
