[package]
name = "evering"
license.workspace = true
authors = [
	"Loi Chyan <loichyan@foxmail.com>",
	"Nostalgia <Nostalume@outlook.com>",
]
version.workspace = true
edition.workspace = true

[features]
default = ["std"]

std = ["dep:parking_lot"]

[dependencies]
async-channel = "2.5.0"
crossbeam-channel = "0.5"

lock_api = "0.4.13"
spin = { version = "0.10.0", features = ["lock_api"] }
parking_lot = { version = "0.12", optional = true }

slab = "0.4.10"
objectpool = { version = "0.1", default-features = false, features = ["alloc"] }
orx-concurrent-option = "1.5.0"

futures = { version = "0.3", default-features = false }

[dev-dependencies]
fastrand.workspace = true
