[package]
name = "evering"
license.workspace = true
authors = [
	"Loi Chyan <loichyan@foxmail.com>",
	"Nostalgia <Nostalume@outlook.com>",
]
version.workspace = true
edition.workspace = true

[features]
default = ["nightly"]

std = ["dep:parking_lot"]
nightly = []

[dependencies]
evering-shm = { path = "../evering-shm" }

lfqueue = { version = "0.8.1", default-features = false }
async-channel = { path = "async-channel" }
crossbeam-channel = "0.5"

lock_api.workspace = true
spin.workspace = true
parking_lot = { version = "0.12", optional = true }

slab = "0.4.11"
objectpool = { version = "0.1", default-features = false, features = ["alloc"] }

futures = { version = "0.3", default-features = false }

[dev-dependencies]
fastrand.workspace = true
