[package]
name = "ipc-bench"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = []
tracing = ["evering/tracing", "dep:tracing", "dep:tracing-subscriber"]

[dependencies]
nix.workspace = true
fastrand.workspace = true
bytes.workspace = true
bytesize.workspace = true

evering = { workspace = true, features = ["unix"] }
tokio.workspace = true
monoio = { version = "0.2.4", features = ["sync"] }

criterion = { version = "0.8.1", features = ["html_reports"] }

tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dependencies.shmipc]
git = "https://github.com/cloudwego/shmipc-rs"
rev = "de966a6ca2d76d574b943f6fd4d3abfa6ff2df5f"

[[bench]]
name = "ipc-bench"
path = "src/lib.rs"
harness = false
